--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "ip-info-react": "^1.0.0",
     "next": "14.2.2",
     "normalize.css": "^8.0.1",
     "react": "^18",
